add box inner div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
 
     <div class="main_wrapper">
+        <div class="box1">
 
+        </div>
+        <div class="box2">
+
+        </div>
+        <div class="box3">
+
+        </div>
     </div>
     
 </body>
