--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <div class="main_wrapper">
         <div class="box1">
-
+            <h2>Box 1</h2>
         </div>
         <div class="box2">
-
+            <h2>box 2</h2>
         </div>
         <div class="box3">
+            <h2>box 3</h2>
 
         </div>
     </div>
